build/k8s/server.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: shared-content-server
    labels:
        app: shared-content-server
        type: frontend
        group: shared-content

spec:
    replicas: 1
    selector:
        matchLabels:
            app: shared-content-server
    template:
        metadata:
            labels:
                app: shared-content-server

        spec:
            imagePullSecrets:
                - name: docker-key
            containers:
                - name: shared-content-server
                  image: shulandmimi/shared-content:server-hash
                  ports:
                      - containerPort: 12306

---
apiVersion: v1
kind: Service
metadata:
    name: shared-content-server-service
    labels:
        app: shared-content-server-service
        group: shared-content-server
        type: frontend
spec:
    selector:
        app: shared-content-server
    ports:
        - name: s-server-http
          port: 80
          targetPort: 12306
          nodePort: 32311
    type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: shared-content-server-ingress
    labels:
        app: shared-content-server
        type: frontend
        group: shared-content
    annotations:
        kubernetes.io/ingress.class: 'nginx'
        nginx.ingress.kubernetes.io/use-regex: 'true'

spec:
    tls:
        - hosts:
              - sharedapi.wdbke.top
          secretName: ingress-secret
    rules:
        - host: sharedapi.wdbke.top
          http:
              paths:
                  - path: /.*
                    pathType: Prefix
                    backend:
                        service:
                            name: shared-content-server-service
                            port:
                                name: s-server-http
